--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,33 @@
-.logo {
+.center {
     display: block;
-    margin: 20px auto;
-}
-
-.btn {
-    margin: 0px auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .buttons {
-    margin: 0px auto;
-    justify-content: center;
-    
+    margin-left: 12px;
+    margin-right: auto;
+    justify-content: center;   
 }
+
 button {
     padding: 10px;
     margin: 10px;
-    
+}
+
+#gifsContainer {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
+    margin: 5px;
+}
+
+img, p {
+    margin: 5px;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif
 }
